<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.FilterDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_filter"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingHorizontal="4dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationContentDescription="Close filter options"
            app:navigationIcon="@drawable/ic_close_24"
            app:title="@string/filter_settings_title"
            app:titleTextAppearance="?attr/textAppearanceHeadline6" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="88dp">

            <!-- Sort By Section -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_sort_by"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_sort_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter_order_by"
                    android:inputType="none"
                    android:paddingVertical="16dp"
                    tools:text="Addition Date" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sort order Section -->
            <TextView
                android:id="@+id/tv_sort_order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/filter_sort_order"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_sort_by" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/mb_group_sort_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:checkedButton="@id/btn_descending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sort_order_title"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_descending"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_sort_descending"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ascending"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_sort_ascending"
                    app:cornerRadius="12dp" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!-- Filter by Rating Section -->
            <TextView
                android:id="@+id/tv_filter_by_rating_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                tools:text="Minimum rating: Any"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mb_group_sort_order" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:stepSize="0.5"
                android:valueFrom="0.5"
                android:valueTo="5"
                app:labelBehavior="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filter_by_rating_display"
                app:thumbRadius="12dp" />

            <!-- Filter by Genre -->
            <TextView
                android:id="@+id/tv_filter_by_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filter_genre_title"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_rating" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/logic_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                tools:checkedButton="@id/btn_and"
                app:layout_constraintBottom_toBottomOf="@id/tv_filter_by_genre_title"
                app:layout_constraintStart_toEndOf="@id/tv_filter_by_genre_title"
                app:layout_constraintTop_toTopOf="@id/tv_filter_by_genre_title"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_and"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logic_and"
                    android:textSize="12sp"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_or"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logic_or"
                    android:textSize="12sp"
                    app:cornerRadius="12dp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:chipSpacingVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logic_switch"
                app:singleSelection="false" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Action Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/colorSurface"
        android:elevation="8dp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:padding="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_filters"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/reset_filter_options_button"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply_filters"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/apply_filter_options_button"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>