<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginTop="48dp"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:paddingBottom="4dp"
        app:endIconContentDescription="Search"
        app:endIconDrawable="@drawable/icon_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@id/button_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="14sp"
            tools:text="Arthur Conan Doyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_filter"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/filter_settings_description"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:text="@string/search_filter_text"
        app:cornerRadius="8dp"
        app:icon="@drawable/icon_filter_list"
        app:iconPadding="4dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="@id/search_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_input_layout"
        app:layout_constraintTop_toTopOf="@id/search_input_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_filter"
        tools:listitem="@layout/item_search_book" />

    <TextView
        android:id="@+id/tv_search_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/search_not_found"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/icon_search_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>


